[package]
name = "craw_thumbnailer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4", features = ["derive"]}
image = {version = "~0", features = ["jpeg", "png"], default_features=false}
